# agentic-bbo

./: .gitignore  AGENTS.md  AGENTS.zh.md  README.md  README.zh.md  manifest.json  progress.md  progress.zh.md  pyproject.toml
bbo/: __init__.py  run.py
bbo/algorithms/: __init__.py  registry.py
bbo/algorithms/agentic/: __init__.py  llambo.py  llm_client.py  model_routing.py  opro.py  pablo.py  prompts.py  serialization.py  state.py  task_registry.py  validation.py
bbo/algorithms/traditional/: __init__.py  pycma.py  random_search.py
bbo/core/: DEVELOPER_GUIDE_zh.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PLAN.zh.md  __init__.py  adapters.py  algo.py  conversion.py  description.py  experimenter.py  logger.py  plotting.py  space.py  task.py  trial.py
bbo/task_descriptions/: README.md  README.zh.md
bbo/task_descriptions/_template/: background.md  constraints.md  environment.md  environment.zh.md  evaluation.md  evaluation.zh.md  goal.md  goal.zh.md  prior_knowledge.md  prior_knowledge.zh.md
bbo/task_descriptions/bboplace_bench/: background.md  background.zh.md  constraints.md  constraints.zh.md  environment.md  goal.md  prior_knowledge.md  submission.md  submission.zh.md
bbo/task_descriptions/bh_demo/: background.md  background.zh.md  constraints.md  constraints.zh.md  environment.md  environment.zh.md  evaluation.md  evaluation.zh.md  goal.md  goal.zh.md  prior_knowledge.md  prior_knowledge.zh.md  submission.md  submission.zh.md
bbo/task_descriptions/branin_demo/: background.md  background.zh.md  constraints.md  constraints.zh.md  environment.md  environment.zh.md  evaluation.md  evaluation.zh.md  goal.md  goal.zh.md  prior_knowledge.md  prior_knowledge.zh.md  submission.md  submission.zh.md
bbo/task_descriptions/collaborator_problem_demo/: background.md  background.zh.md  constraints.md  constraints.zh.md  environment.md  environment.zh.md  evaluation.md  evaluation.zh.md  goal.md  goal.zh.md  prior_knowledge.md  prior_knowledge.zh.md  submission.md  submission.zh.md
bbo/tasks/: __init__.py  registry.py
bbo/tasks/bboplace/: task.py  (+1 more)
docs/: collaborator_demo.md  collaborator_demo.zh.md  pr_additions_and_standards.zh.md
examples/: run_branin_suite.py  run_knob_surrogate_demo.py  run_llambo_demo.py  run_llambo_openai_demo.py  run_opro_demo.py  run_opro_openai_demo.py  run_pycma_demo.py  run_random_search_demo.py
tests/: test_bboplace_task.py  test_continuous_converter.py  test_description.py  test_experimenter.py  test_llambo.py  test_opro.py  test_pablo.py  test_pfns4bo.py  test_plotting.py  test_pycma.py  test_scientific_tasks.py  test_space.py
(+101 files in other folders)
