[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-bbo-benchmark"
version = "0.1.0"
description = "A lightweight benchmark core for agentic black-box optimization."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "OpenAI Codex" }]
dependencies = [
  "cma>=4.0.0",
  "matplotlib>=3.9.0",
  "numpy>=2.2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
]
surrogate = [
  "joblib>=1.4",
  "scikit-learn>=1.5.0",
]
optuna = [
  "optuna>=4.0",
]
bo-tutorial = [
  "openpyxl>=3.1",
  "pandas>=1.0.1",
  "rdkit",
  "scikit-learn>=1.5.0",
  "selfies>=2.1.0",
  "scipy>=1.1",
  "tqdm",
]
bo-tutorial-full = [
  "catboost>=0.24.4",
  "disjoint-set",
  "gpytorch>=1.4.0",
  "hebo",
  "pymoo==0.6.1.6",
  "torch>=1.9.0",
]
pfns4bo = [
  "botorch",
  "gpytorch>=1.4.0",
  "pfns4bo",
  "scikit-learn>=0.22",
  "scipy>=1.1",
  "torch>=1.9.0",
]
pablo = [
  "openai>=1.0",
]
nanobot = [
  "nanobot-ai",
]
claude-code = [
  "claude-agent-sdk>=0.1.0",
]
general-agent = [
  "claude-agent-sdk>=0.1.0",
  "nanobot-ai",
]
interop = [
  "ConfigSpace>=1.2.0",
]

[tool.uv]
conflicts = [
  [
    { extra = "bo-tutorial" },
    { extra = "pfns4bo" },
  ],
  [
    { extra = "surrogate" },
    { extra = "pfns4bo" },
  ],
]

[project.scripts]
bbo-demo = "bbo.run:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["bbo*"]

[tool.setuptools.package-data]
bbo = ["task_descriptions/**/*.md"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
markers = [
  "unit: fast, isolated unit tests",
  "integration: slower tests that may use external services or data",
]
